<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="5dip" >

    <CheckBox
        android:id="@+id/proxyEnable"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/use_proxy_server" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal" >

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/proxy_type"
            android:textStyle="bold" />

        <TextView
            android:layout_marginLeft="10dip"
            android:id="@+id/proxyType"
            style="@style/textLink"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="HTTP" />
    </LinearLayout>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/server" />

    <EditText
        android:id="@+id/proxyServer"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:digits="0123456789." >
    </EditText>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/port" />

    <EditText
        android:id="@+id/proxyPort"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:digits="0123456789" >
    </EditText>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/user" />

    <EditText
        android:id="@+id/proxyUser"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" >
    </EditText>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/password" />

    <EditText
        android:id="@+id/proxyPassword"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" >
    </EditText>

</LinearLayout>