<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:myseek="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent" >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:padding="2dip" >

        <LinearLayout
            android:id="@+id/fontSizeLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:clickable="true"
            android:gravity="center_vertical" >

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="5dip"
                android:text="@string/folder_with_fonts"
                android:textSize="14sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/fontsFolder"
                style="@style/textLink"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dip"
                android:text="/sdcard/xxxx" />

            <ImageView
                android:id="@+id/downloadFonts"
                android:layout_width="@dimen/wh_button"
                android:layout_height="@dimen/wh_button"
                android:layout_alignParentRight="true"
                android:layout_weight="0"
                android:padding="8dip"
                android:src="@drawable/glyphicons_182_download_alt"
                android:tint="@color/tint_gray" />
        </LinearLayout>

        <com.foobnix.pdf.info.view.CustomSeek
            android:id="@+id/fontWeight"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dip"
            android:visibility="gone"
            myseek:text="Weight" >
        </com.foobnix.pdf.info.view.CustomSeek>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content" >

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="5dip"
                android:singleLine="true"
                android:text="@string/text_align"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/textAlign"
                style="@style/textLink"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dip"
                android:minWidth="50dip"
                android:text="@string/left" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/documentStyleLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_vertical"
            android:orientation="horizontal" >

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="5dip"
                android:singleLine="true"
                android:text="@string/styles"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/documentStyle"
                style="@style/textLink"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dip"
                android:layout_weight="1"
                android:gravity="center_vertical"
                android:singleLine="false"
                android:text="@string/user_styles" />

            <ImageView
                android:id="@+id/customCSS"
                android:layout_width="@dimen/wh_button"
                android:layout_height="@dimen/wh_button"
                android:layout_alignParentRight="true"
                android:layout_marginRight="4dip"
                android:layout_weight="0"
                android:background="@drawable/bg_border_ltgray"
                android:padding="8dip"
                android:src="@drawable/glyphicons_685_article"
                android:tint="@color/tint_gray" />
        </LinearLayout>

        <CheckBox
            android:id="@+id/isAutoHypens"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/automatic_hyphenation" />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center_vertical" >

            <TextView
                android:id="@+id/hypenLangLabel"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="5dip"
                android:layout_weight="0"
                android:text="@string/hyphenation_language" />

            <TextView
                android:id="@+id/hypenLang"
                style="@style/textLink"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dip"
                android:layout_weight="0"
                android:minWidth="50dip"
                android:text="Russian" />
        </LinearLayout>

        <CheckBox
            android:id="@+id/isAccurateFontSize"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/normalize_font_size" />


        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_marginTop="2dip"
            android:background="@color/lt_grey_alpha" />

        <com.foobnix.pdf.info.view.CustomSeek
            android:id="@+id/lineHeight"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dip"
            myseek:text="@string/line_spacing" >
        </com.foobnix.pdf.info.view.CustomSeek>

        <com.foobnix.pdf.info.view.CustomSeek
            android:id="@+id/paragraphHeight"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dip"
            myseek:text="@string/paragraph_spacing" >
        </com.foobnix.pdf.info.view.CustomSeek>

        <com.foobnix.pdf.info.view.CustomSeek
            android:id="@+id/fontParagraph"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dip"
            myseek:text="@string/indent" >
        </com.foobnix.pdf.info.view.CustomSeek>

        <com.foobnix.pdf.info.view.CustomSeek
            android:id="@+id/emptyLine"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dip"
            myseek:text="@string/empty_line" >
        </com.foobnix.pdf.info.view.CustomSeek>

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_marginTop="2dip"
            android:background="@color/lt_grey_alpha" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:clickable="true"
            android:gravity="center_vertical" >

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="5dip"
                android:text="@string/margin_width"
                android:textSize="14sp"
                android:textStyle="bold" />
        </LinearLayout>

        <com.foobnix.pdf.info.view.CustomSeek
            android:id="@+id/marginTop"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dip"
            myseek:text="@string/top" >
        </com.foobnix.pdf.info.view.CustomSeek>

        <com.foobnix.pdf.info.view.CustomSeek
            android:id="@+id/marginBottom"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dip"
            myseek:text="@string/bottom" >
        </com.foobnix.pdf.info.view.CustomSeek>

        <com.foobnix.pdf.info.view.CustomSeek
            android:id="@+id/marginLeft"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dip"
            myseek:text="@string/left" >
        </com.foobnix.pdf.info.view.CustomSeek>

        <com.foobnix.pdf.info.view.CustomSeek
            android:id="@+id/marginRight"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dip"
            myseek:text="@string/right" >
        </com.foobnix.pdf.info.view.CustomSeek>

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_marginTop="2dip"
            android:background="@color/lt_grey_alpha" />

        <com.foobnix.pdf.info.view.CustomColorView
            android:id="@+id/linkColorDay"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dip"
            myseek:text="@string/links_color_day" />

        <com.foobnix.pdf.info.view.CustomColorView
            android:id="@+id/linkColorNight"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dip"
            myseek:text="@string/links_color_night" />

        <TextView
            android:id="@+id/onResetStyles"
            style="@style/textLink"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="0"
            android:text="@string/restore_defaults_short" />
    </LinearLayout>

</ScrollView>